Completed i18n: language switcher in settings, fixed List View, redesigned TitleDB help, English default for top bar

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -18,5 +18,9 @@
     "TitleDB Sources": "TitleDB Sources",
     "Settings": "Settings",
     "Search": "Search",
-    "Filter": "Filter"
+    "Filter": "Filter",
+    "Card View": "Card View",
+    "Icon View": "Icon View",
+    "List View": "List View",
+    "Click for details": "Click for details"
 }
