--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -18,5 +18,9 @@
     "TitleDB Sources": "Fontes TitleDB",
     "Settings": "Configurações",
     "Search": "Buscar",
-    "Filter": "Filtrar"
+    "Filter": "Filtrar",
+    "Card View": "Visualização em Cartões",
+    "Icon View": "Visualização em Ícones",
+    "List View": "Visualização em Lista",
+    "Click for details": "Clique para detalhes"
 }
