Fixed DLCs in List View, show latest owned version, expanded i18n for all visible texts

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -22,5 +22,34 @@
     "Card View": "Card View",
     "Icon View": "Icon View",
     "List View": "List View",
-    "Click for details": "Click for details"
+    "Click for details": "Click for details",
+    "Icon": "Icon",
+    "Title": "Title",
+    "ID": "ID",
+    "Type": "Type",
+    "Version": "Version",
+    "Multiple": "Multiple",
+    "Search titles...": "Search titles...",
+    "Items per page": "Items per page",
+    "Custom": "Custom",
+    "Apply": "Apply",
+    "Current Active Source": "Current Active Source",
+    "Last local update": "Last local update",
+    "ago": "ago",
+    "Up to date": "Up to date",
+    "Outdated": "Outdated",
+    "Remote Source Date": "Remote Source Date",
+    "Loaded Titles File": "Loaded Titles File",
+    "No TitleDB source active": "No TitleDB source active",
+    "Run an update to populate TitleDB status": "Run an update to populate TitleDB status",
+    "List of sources": "List of sources",
+    "Name": "Name",
+    "URL": "URL",
+    "Priority": "Priority",
+    "Status": "Status",
+    "Actions": "Actions",
+    "Enabled": "Enabled",
+    "Disabled": "Disabled",
+    "Last Update": "Last Update",
+    "Never": "Never"
 }
