--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -22,5 +22,34 @@
     "Card View": "Visualização em Cartões",
     "Icon View": "Visualização em Ícones",
     "List View": "Visualização em Lista",
-    "Click for details": "Clique para detalhes"
+    "Click for details": "Clique para detalhes",
+    "Icon": "Ícone",
+    "Title": "Título",
+    "ID": "ID",
+    "Type": "Tipo",
+    "Version": "Versão",
+    "Multiple": "Múltiplas",
+    "Search titles...": "Buscar títulos...",
+    "Items per page": "Itens por página",
+    "Custom": "Personalizado",
+    "Apply": "Aplicar",
+    "Current Active Source": "Fonte Ativa Atual",
+    "Last local update": "Última atualização local",
+    "ago": "atrás",
+    "Up to date": "Atualizado",
+    "Outdated": "Desatualizado",
+    "Remote Source Date": "Data da Fonte Remota",
+    "Loaded Titles File": "Arquivo de Títulos Carregado",
+    "No TitleDB source active": "Nenhuma fonte TitleDB ativa",
+    "Run an update to populate TitleDB status": "Execute uma atualização para popular o status do TitleDB",
+    "List of sources": "Lista de fontes",
+    "Name": "Nome",
+    "URL": "URL",
+    "Priority": "Prioridade",
+    "Status": "Status",
+    "Actions": "Ações",
+    "Enabled": "Ativado",
+    "Disabled": "Desativado",
+    "Last Update": "Última Atualização",
+    "Never": "Nunca"
 }
