--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,5 +1,10 @@
 {
     "Library": "Library",
+    "Settings": "Settings",
+    "Setup": "Setup",
+    "Login": "Login",
+    "Logout": "Logout",
+    "Toggle Theme": "Toggle Theme",
     "Total Games": "Total Games",
     "Total DLCs": "Total DLCs",
     "Total Updates": "Total Updates",
@@ -16,7 +21,6 @@
     "Missing Updates": "Missing Updates",
     "Missing DLCs": "Missing DLCs",
     "TitleDB Sources": "TitleDB Sources",
-    "Settings": "Settings",
     "Search": "Search",
     "Filter": "Filter",
     "Card View": "Card View",
@@ -51,5 +55,16 @@
     "Enabled": "Enabled",
     "Disabled": "Disabled",
     "Last Update": "Last Update",
-    "Never": "Never"
+    "Never": "Never",
+    "Submit": "Submit",
+    "Add library path": "Add library path",
+    "Scan library": "Scan library",
+    "Add a new directory": "Add a new directory",
+    "Path": "Path",
+    "Cancel": "Cancel",
+    "Delete": "Delete",
+    "Language / Idioma": "Language / Idioma",
+    "Browser detection is enabled by default": "Browser detection is enabled by default",
+    "English (Default)": "English (Default)",
+    "Português (Brasil)": "Portuguese (Brasil)"
 }
