Removed Setup menu, expanded translations, implemented grouped accordion list view

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,14 +1,11 @@
 {
     "Library": "Library",
     "Settings": "Settings",
-    "Setup": "Setup",
     "Login": "Login",
     "Logout": "Logout",
     "Toggle Theme": "Toggle Theme",
-    "Total Games": "Total Games",
-    "Total DLCs": "Total DLCs",
-    "Total Updates": "Total Updates",
     "Total Files": "Total Files",
+    "Click for details": "Click for details",
     "Owned Content": "Owned Content",
     "Library Status": "Library Status",
     "Missing Content": "Missing Content",
@@ -20,23 +17,18 @@
     "Missing Base Games": "Missing Base Games",
     "Missing Updates": "Missing Updates",
     "Missing DLCs": "Missing DLCs",
-    "TitleDB Sources": "TitleDB Sources",
-    "Search": "Search",
-    "Filter": "Filter",
+    "Search titles...": "Search titles...",
     "Card View": "Card View",
     "Icon View": "Icon View",
     "List View": "List View",
-    "Click for details": "Click for details",
+    "Items per page": "Items per page",
     "Icon": "Icon",
     "Title": "Title",
     "ID": "ID",
     "Type": "Type",
     "Version": "Version",
     "Multiple": "Multiple",
-    "Search titles...": "Search titles...",
-    "Items per page": "Items per page",
-    "Custom": "Custom",
-    "Apply": "Apply",
+    "TitleDB Sources": "TitleDB Sources",
     "Current Active Source": "Current Active Source",
     "Last local update": "Last local update",
     "ago": "ago",
@@ -56,15 +48,52 @@
     "Disabled": "Disabled",
     "Last Update": "Last Update",
     "Never": "Never",
-    "Submit": "Submit",
+    "Users": "Users",
+    "User": "User",
+    "Permissions": "Permissions",
+    "Shop": "Shop",
+    "Backup": "Backup",
+    "Admin": "Admin",
+    "Delete user": "Delete user",
+    "Cancel": "Cancel",
+    "Delete": "Delete",
+    "Add new user": "Add new user",
+    "Username": "Username",
+    "Password": "Password",
+    "Add User": "Add User",
+    "Library paths": "Library paths",
+    "Path of directory containing your games": "Path of directory containing your games",
+    "Path": "Path",
     "Add library path": "Add library path",
     "Scan library": "Scan library",
     "Add a new directory": "Add a new directory",
-    "Path": "Path",
-    "Cancel": "Cancel",
-    "Delete": "Delete",
+    "Add": "Add",
+    "General": "General",
+    "Region": "Region",
+    "Language": "Language",
+    "Application language": "Application language",
+    "Tinfoil/MyFoil uses this to identify files": "Tinfoil/MyFoil uses this to identify files, regardless of the filename",
+    "Submit": "Submit",
+    "Manage TitleDB metadata sources and priorities": "Manage TitleDB metadata sources and priorities",
+    "Add New Source": "Add New Source",
+    "Source Name": "Source Name",
+    "Base URL": "Base URL",
+    "Source Type": "Source Type",
+    "JSON (Direct)": "JSON (Direct)",
+    "Legacy (ZIP)": "Legacy (ZIP)",
+    "Force TitleDB Update": "Force TitleDB Update",
+    "Shop Settings": "Shop Settings",
+    "Shop Host": "Shop Host",
+    "Your full URL with protocol": "Your full URL with protocol (e.g., https://example.com)",
+    "Public shop": "Public shop",
+    "If enabled, Shop access from Tinfoil does not require authentication": "If enabled, Shop access from Tinfoil does not require authentication",
+    "Encrypt shop": "Encrypt shop",
+    "Serve encrypted and compressed shop": "Serve encrypted and compressed shop, so that only Tinfoil clients can access the content",
+    "Strongly suggested to enable it for security": "Strongly suggested to enable it for security",
+    "Message of the day": "Message of the day",
+    "Message presented when opening Tinfoil": "Message presented when opening Tinfoil after successfully loading your shop",
     "Language / Idioma": "Language / Idioma",
-    "Browser detection is enabled by default": "Browser detection is enabled by default",
     "English (Default)": "English (Default)",
-    "Português (Brasil)": "Portuguese (Brasil)"
+    "Português (Brasil)": "Portuguese (Brasil)",
+    "Browser detection is enabled by default": "Browser detection is enabled by default"
 }
