--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -1,14 +1,11 @@
 {
     "Library": "Biblioteca",
     "Settings": "Configurações",
-    "Setup": "Configuração",
     "Login": "Entrar",
     "Logout": "Sair",
     "Toggle Theme": "Alternar Tema",
-    "Total Games": "Total de Jogos",
-    "Total DLCs": "Total de DLCs",
-    "Total Updates": "Total de Atualizações",
     "Total Files": "Total de Arquivos",
+    "Click for details": "Clique para detalhes",
     "Owned Content": "Conteúdo Adquirido",
     "Library Status": "Status da Biblioteca",
     "Missing Content": "Conteúdo Faltante",
@@ -20,23 +17,18 @@
     "Missing Base Games": "Jogos Base Faltantes",
     "Missing Updates": "Atualizações Faltantes",
     "Missing DLCs": "DLCs Faltantes",
-    "TitleDB Sources": "Fontes TitleDB",
-    "Search": "Buscar",
-    "Filter": "Filtrar",
+    "Search titles...": "Buscar títulos...",
     "Card View": "Visualização em Cartões",
     "Icon View": "Visualização em Ícones",
     "List View": "Visualização em Lista",
-    "Click for details": "Clique para detalhes",
+    "Items per page": "Itens por página",
     "Icon": "Ícone",
     "Title": "Título",
     "ID": "ID",
     "Type": "Tipo",
     "Version": "Versão",
     "Multiple": "Múltiplas",
-    "Search titles...": "Buscar títulos...",
-    "Items per page": "Itens por página",
-    "Custom": "Personalizado",
-    "Apply": "Aplicar",
+    "TitleDB Sources": "Fontes TitleDB",
     "Current Active Source": "Fonte Ativa Atual",
     "Last local update": "Última atualização local",
     "ago": "atrás",
@@ -56,15 +48,52 @@
     "Disabled": "Desativado",
     "Last Update": "Última Atualização",
     "Never": "Nunca",
-    "Submit": "Enviar",
+    "Users": "Usuários",
+    "User": "Usuário",
+    "Permissions": "Permissões",
+    "Shop": "Loja",
+    "Backup": "Backup",
+    "Admin": "Admin",
+    "Delete user": "Excluir usuário",
+    "Cancel": "Cancelar",
+    "Delete": "Excluir",
+    "Add new user": "Adicionar novo usuário",
+    "Username": "Nome de usuário",
+    "Password": "Senha",
+    "Add User": "Adicionar Usuário",
+    "Library paths": "Caminhos da biblioteca",
+    "Path of directory containing your games": "Caminho do diretório contendo seus jogos",
+    "Path": "Caminho",
     "Add library path": "Adicionar caminho da biblioteca",
     "Scan library": "Escanear biblioteca",
     "Add a new directory": "Adicionar novo diretório",
-    "Path": "Caminho",
-    "Cancel": "Cancelar",
-    "Delete": "Excluir",
+    "Add": "Adicionar",
+    "General": "Geral",
+    "Region": "Região",
+    "Language": "Idioma",
+    "Application language": "Idioma da aplicação",
+    "Tinfoil/MyFoil uses this to identify files": "Tinfoil/MyFoil usa isto para identificar arquivos, independentemente do nome do arquivo",
+    "Submit": "Enviar",
+    "Manage TitleDB metadata sources and priorities": "Gerenciar fontes de metadados TitleDB e prioridades",
+    "Add New Source": "Adicionar Nova Fonte",
+    "Source Name": "Nome da Fonte",
+    "Base URL": "URL Base",
+    "Source Type": "Tipo de Fonte",
+    "JSON (Direct)": "JSON (Direto)",
+    "Legacy (ZIP)": "Legado (ZIP)",
+    "Force TitleDB Update": "Forçar Atualização do TitleDB",
+    "Shop Settings": "Configurações da Loja",
+    "Shop Host": "Host da Loja",
+    "Your full URL with protocol": "Sua URL completa com protocolo (ex: https://exemplo.com)",
+    "Public shop": "Loja pública",
+    "If enabled, Shop access from Tinfoil does not require authentication": "Se ativado, o acesso à Loja via Tinfoil não requer autenticação",
+    "Encrypt shop": "Criptografar loja",
+    "Serve encrypted and compressed shop": "Servir loja criptografada e comprimida, para que apenas clientes Tinfoil possam acessar o conteúdo",
+    "Strongly suggested to enable it for security": "Fortemente sugerido ativar para segurança",
+    "Message of the day": "Mensagem do dia",
+    "Message presented when opening Tinfoil": "Mensagem apresentada ao abrir o Tinfoil após carregar sua loja com sucesso",
     "Language / Idioma": "Language / Idioma",
-    "Browser detection is enabled by default": "Detecção do navegador está habilitada por padrão",
     "English (Default)": "Inglês (Padrão)",
-    "Português (Brasil)": "Português (Brasil)"
+    "Português (Brasil)": "Português (Brasil)",
+    "Browser detection is enabled by default": "Detecção do navegador está habilitada por padrão"
 }
