Complete translations for Users, Titles, TitleDB, Shop sections and added clickable link to loaded titles file

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -64,6 +64,12 @@
     "Username": "Username",
     "Password": "Password",
     "Add User": "Add User",
+    "Add a new user": "Add a new user",
+    "Shop Access": "Shop Access",
+    "Backup Access": "Backup Access",
+    "Admin Access": "Admin Access",
+    "Email": "Email",
+    "List of users": "List of users",
     "Library paths": "Library paths",
     "Path of directory containing your games": "Path of directory containing your games",
     "Path": "Path",
@@ -71,12 +77,20 @@
     "Scan library": "Scan library",
     "Add a new directory": "Add a new directory",
     "Add": "Add",
+    "Delete library path": "Delete library path",
     "General": "General",
     "Region": "Region",
     "Language": "Language",
+    "Library Region": "Library Region",
+    "Library Language": "Library Language",
+    "Region and Language used to get games informations": "Region and Language used to get games informations",
+    "Console keys": "Console keys",
+    "Keys are valid": "Keys are valid!",
+    "Invalid keys file": "Invalid keys file!",
     "Application language": "Application language",
-    "Tinfoil/MyFoil uses this to identify files": "Tinfoil/MyFoil uses this to identify files, regardless of the filename",
+    "Tinfoil/MyFoil uses this to identify files": "Console keys are required to decrypt any Nintendo content, including backups. MyFoil uses this to identify files, regardless of the filename",
     "Submit": "Submit",
+    "Titles": "Titles",
     "Manage TitleDB metadata sources and priorities": "Manage TitleDB metadata sources and priorities",
     "Add New Source": "Add New Source",
     "Source Name": "Source Name",
