--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -64,6 +64,12 @@
     "Username": "Nome de usuário",
     "Password": "Senha",
     "Add User": "Adicionar Usuário",
+    "Add a new user": "Adicionar um novo usuário",
+    "Shop Access": "Acesso à Loja",
+    "Backup Access": "Acesso ao Backup",
+    "Admin Access": "Acesso Admin",
+    "Email": "E-mail",
+    "List of users": "Lista de usuários",
     "Library paths": "Caminhos da biblioteca",
     "Path of directory containing your games": "Caminho do diretório contendo seus jogos",
     "Path": "Caminho",
@@ -71,12 +77,20 @@
     "Scan library": "Escanear biblioteca",
     "Add a new directory": "Adicionar novo diretório",
     "Add": "Adicionar",
+    "Delete library path": "Excluir caminho da biblioteca",
     "General": "Geral",
     "Region": "Região",
     "Language": "Idioma",
+    "Library Region": "Região da Biblioteca",
+    "Library Language": "Idioma da Biblioteca",
+    "Region and Language used to get games informations": "Região e idioma usados para obter informações dos jogos",
+    "Console keys": "Chaves do console",
+    "Keys are valid": "Chaves são válidas!",
+    "Invalid keys file": "Arquivo de chaves inválido!",
     "Application language": "Idioma da aplicação",
-    "Tinfoil/MyFoil uses this to identify files": "Tinfoil/MyFoil usa isto para identificar arquivos, independentemente do nome do arquivo",
+    "Tinfoil/MyFoil uses this to identify files": "Chaves do console são necessárias para descriptografar qualquer conteúdo Nintendo, incluindo backups. MyFoil usa isto para identificar arquivos, independentemente do nome do arquivo",
     "Submit": "Enviar",
+    "Titles": "Títulos",
     "Manage TitleDB metadata sources and priorities": "Gerenciar fontes de metadados TitleDB e prioridades",
     "Add New Source": "Adicionar Nova Fonte",
     "Source Name": "Nome da Fonte",
