UI: Modernized settings, added custom items-per-page, increased icon size range, and fixed language switching

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -12,6 +12,8 @@
     "Games": "Games",
     "Updates": "Updates",
     "DLCs": "DLCs",
+    "Items": "Items",
+    "Save": "Save",
     "Games needing Update": "Games needing Update",
     "Games missing DLCs": "Games missing DLCs",
     "Missing Base Games": "Missing Base Games",
