--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -12,6 +12,8 @@
     "Games": "Jogos",
     "Updates": "Atualizações",
     "DLCs": "DLCs",
+    "Items": "Itens",
+    "Save": "Salvar",
     "Games needing Update": "Jogos precisando de atualização",
     "Games missing DLCs": "Jogos faltando DLCs",
     "Missing Base Games": "Jogos Base Faltantes",
