feat: Enhanced sorting, filtering, and UI improvements
- Implemented advanced sorting (name, date, size, status) in library view.
- Added eShop link to game details modal.
- Fixed browser authentication for direct file downloads.
- Improved mobile UI responsiveness for controls.
- Added comprehensive translations for new UI elements.
- Updated documentation and roadmap.

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -124,5 +124,38 @@
     "Description": "Description",
     "No description available": "No description available",
     "Versions": "Versions",
-    "close": "close"
+    "close": "close",
+    "Filter by Genre": "Filter by Genre",
+    "Filter by Tag": "Filter by Tag",
+    "All Genres": "All Genres",
+    "All Tags": "All Tags",
+    "Filters": "Filters",
+    "Sort": "Sort",
+    "A-Z (Name)": "A-Z (Name)",
+    "Z-A (Name)": "Z-A (Name)",
+    "Release (Newest)": "Release (Newest)",
+    "Release (Oldest)": "Release (Oldest)",
+    "Recently Added": "Recently Added",
+    "Oldest Added": "Oldest Added",
+    "Title ID (Ascending)": "Title ID (Ascending)",
+    "Update Status": "Update Status",
+    "Clear Filters": "Clear Filters",
+    "Missing Base File": "Missing Base File",
+    "Updates Pending": "Updates Pending",
+    "DLCs Pending": "DLCs Pending",
+    "Base": "Base",
+    "Update": "Update",
+    "DLC": "DLC",
+    "Grid": "Grid",
+    "Icons": "Icons",
+    "List": "List",
+    "Clear": "Clear",
+    "Library updated!": "Library updated!",
+    "View DLC details": "View DLC details",
+    "Add Tag...": "Add Tag...",
+    "Wishlist": "Wishlist",
+    "Removed from Wishlist": "Removed from Wishlist",
+    "Added to Wishlist": "Added to Wishlist",
+    "Total on Disk": "Total on Disk",
+    "Custom Tags": "Custom Tags"
 }
