--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -134,5 +134,38 @@
     "Configure your shop URL to enable host verification.": "Configure la URL de su tienda para habilitar la verificación de host.",
     "Shop URL": "URL de la Tienda",
     "Versions": "Versiones",
-    "close": "cerrar"
+    "close": "cerrar",
+    "Filter by Genre": "Filtrar por Género",
+    "Filter by Tag": "Filtrar por Etiqueta",
+    "All Genres": "Todos los Géneros",
+    "All Tags": "Todas las Etiquetas",
+    "Filters": "Filtros",
+    "Sort": "Ordenar",
+    "A-Z (Name)": "A-Z (Nombre)",
+    "Z-A (Name)": "Z-A (Nombre)",
+    "Release (Newest)": "Lanzamiento (Nuevo)",
+    "Release (Oldest)": "Lanzamiento (Antiguo)",
+    "Recently Added": "Añadido Recientemente",
+    "Oldest Added": "Añadido Antiguamente",
+    "Title ID (Ascending)": "Title ID (Ascendente)",
+    "Update Status": "Estado de Actualización",
+    "Clear Filters": "Limpiar Filtros",
+    "Missing Base File": "Falta Archivo Base",
+    "Updates Pending": "Actualización Pendiente",
+    "DLCs Pending": "DLC Pendiente",
+    "Base": "Base",
+    "Update": "Update",
+    "DLC": "DLC",
+    "Grid": "Cuadrícula",
+    "Icons": "Iconos",
+    "List": "Lista",
+    "Clear": "Limpiar",
+    "Library updated!": "¡Biblioteca actualizada!",
+    "View DLC details": "Ver detalles de DLC",
+    "Add Tag...": "Añadir Etiqueta...",
+    "Wishlist": "Lista de Deseos",
+    "Removed from Wishlist": "Eliminado de la Lista de Deseos",
+    "Added to Wishlist": "Añadido a la Lista de Deseos",
+    "Total on Disk": "Total en Disco",
+    "Custom Tags": "Etiquetas Personalizadas"
 }
