--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -133,5 +133,38 @@
     "Configure your shop URL to enable host verification.": "Configure a URL da sua loja para habilitar a verificação de host.",
     "Shop URL": "URL da Loja",
     "Versions": "Versões",
-    "close": "fechar"
+    "close": "fechar",
+    "Filter by Genre": "Filtrar por Gênero",
+    "Filter by Tag": "Filtrar por Tag",
+    "All Genres": "Todos os Gêneros",
+    "All Tags": "Todas as Tags",
+    "Filters": "Filtros",
+    "Sort": "Ordenar",
+    "A-Z (Name)": "A-Z (Nome)",
+    "Z-A (Name)": "Z-A (Nome)",
+    "Release (Newest)": "Lançamento (Novo)",
+    "Release (Oldest)": "Lançamento (Antigo)",
+    "Recently Added": "Adicionado Recentemente",
+    "Oldest Added": "Adicionado Antigamente",
+    "Title ID (Ascending)": "Title ID (Crescente)",
+    "Update Status": "Status de Atualização",
+    "Clear Filters": "Limpar Filtros",
+    "Missing Base File": "Falta Arquivo Base",
+    "Updates Pending": "Pendente Atualização",
+    "DLCs Pending": "Pendente DLC",
+    "Base": "Base",
+    "Update": "Update",
+    "DLC": "DLC",
+    "Grid": "Grade",
+    "Icons": "Ícones",
+    "List": "Lista",
+    "Clear": "Limpar",
+    "Library updated!": "Biblioteca atualizada!",
+    "View DLC details": "Ver detalhes da DLC",
+    "Add Tag...": "Adicionar Tag...",
+    "Wishlist": "Wishlist",
+    "Removed from Wishlist": "Removido da Wishlist",
+    "Added to Wishlist": "Adicionado à Wishlist",
+    "Total on Disk": "Total em Disco",
+    "Custom Tags": "Tags Personalizadas"
 }
