feat: enable edit game data for all games, fix translations, and refactor build_version

--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -30,7 +30,7 @@
     "Type": "Tipo",
     "Version": "Versão",
     "Multiple": "Múltiplas",
-    "Owned": "Adquirido",
+    "Owned": "Atualizado",
     "Missing": "Faltando",
     "No DLCs or Updates available": "Nenhuma DLC ou Atualização disponível",
     "TitleDB Sources": "Fontes TitleDB",
