fix: translation toast messages and add missing translation keys
- Fix JavaScript t() function usage in settings.html
- Add missing translations: Priorities updated, Failed to update priorities, Settings saved, Shop settings saved
- Update pt_BR, en, and es translation files

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -47,6 +47,10 @@
     "Name": "Name",
     "URL": "URL",
     "Priority": "Priority",
+    "Priorities updated": "Priorities updated",
+    "Failed to update priorities": "Failed to update priorities",
+    "Settings saved": "Settings saved",
+    "Shop settings saved": "Shop settings saved",
     "Status": "Status",
     "Actions": "Actions",
     "Enabled": "Enabled",
