--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -47,6 +47,10 @@
     "Name": "Nombre",
     "URL": "URL",
     "Priority": "Prioridad",
+    "Priorities updated": "Prioridades actualizadas",
+    "Failed to update priorities": "Error al actualizar prioridades",
+    "Settings saved": "Configuración guardada",
+    "Shop settings saved": "Configuración de la tienda guardada",
     "Status": "Estado",
     "Actions": "Acciones",
     "Enabled": "Habilitado",
