--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -47,6 +47,10 @@
     "Name": "Nome",
     "URL": "URL",
     "Priority": "Prioridade",
+    "Priorities updated": "Prioridades atualizadas",
+    "Failed to update priorities": "Falha ao atualizar prioridades",
+    "Settings saved": "Configurações salvas",
+    "Shop settings saved": "Configurações da loja salvas",
     "Status": "Status",
     "Actions": "Ações",
     "Enabled": "Ativado",
