feat: add Save button and auto-use latest option for TitleDB
- Add Save button in TitleDB section header
- Add auto_use_latest checkbox option
- Add saveTitleDBSettings function
- Add translations for new UI elements
- Add logging when TitleDB file is downloaded from a source

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -51,6 +51,11 @@
     "Failed to update priorities": "Failed to update priorities",
     "Settings saved": "Settings saved",
     "Shop settings saved": "Shop settings saved",
+    "Auto-use latest": "Auto-use latest",
+    "Save TitleDB settings": "Save TitleDB settings",
+    "Save": "Save",
+    "Automatically use the source with the most recent data": "Automatically use the source with the most recent data",
+    "Refresh remote dates": "Refresh remote dates",
     "Status": "Status",
     "Actions": "Actions",
     "Enabled": "Enabled",
