--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -51,6 +51,11 @@
     "Failed to update priorities": "Error al actualizar prioridades",
     "Settings saved": "Configuración guardada",
     "Shop settings saved": "Configuración de la tienda guardada",
+    "Auto-use latest": "Usar más reciente automáticamente",
+    "Save TitleDB settings": "Guardar configuración de TitleDB",
+    "Save": "Guardar",
+    "Automatically use the source with the most recent data": "Usar automáticamente la fuente con los datos más recientes",
+    "Refresh remote dates": "Actualizar fechas remotas",
     "Status": "Estado",
     "Actions": "Acciones",
     "Enabled": "Habilitado",
