--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -51,6 +51,11 @@
     "Failed to update priorities": "Falha ao atualizar prioridades",
     "Settings saved": "Configurações salvas",
     "Shop settings saved": "Configurações da loja salvas",
+    "Auto-use latest": "Usar mais recente automaticamente",
+    "Save TitleDB settings": "Salvar configurações do TitleDB",
+    "Save": "Salvar",
+    "Automatically use the source with the most recent data": "Automaticamente usar a fonte com os dados mais recentes",
+    "Refresh remote dates": "Atualizar datas remotas",
     "Status": "Status",
     "Actions": "Ações",
     "Enabled": "Ativado",
